# JinBot

./: .gitignore  Cargo.toml  dataflow.yml
common/: Cargo.toml
common/src/: logging.rs
config/: feetech.json
damiao_driver/: Cargo.toml
damiao_driver/src/: main.rs
feetech_driver/: Cargo.toml  README.md  feetech.json
feetech_driver/src/: config.rs  controller.rs  display.rs  handlers.rs  main.rs  motors.rs
robot/: .env  .env.example  CHECKLIST.md  config.json  normalize_jinbot_urdf.py  robot.urdf
robot/assets/: base_link.part  base_link.stl  dm_j6006_2ec.part  dm_j6006_2ec.stl  dm_j8006_2ec_v1_1.part  dm_j8006_2ec_v1_1.stl  dm_j8006_2ec_v1_1__2.part  dm_j8006_2ec_v1_1__2.stl  dm_j8006_2ec_v1_1__3.part  dm_j8006_2ec_v1_1__3.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl  part_1__3.part  part_1__3.stl  part_1__4.part  part_1__4.stl  part_2.part  part_2.stl  part_2__2.part  part_2__2.stl  part_2__3.part  part_2__3.stl  plate.part  plate.stl  rod_1.part  rod_1.stl  rod_2.part  rod_2.stl  st3215.part  st3215.stl
